--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Daniel Carrillo, Samuel Romero, Tolo Castañer",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "^2.0.0"
+    "puppeteer": "^5.5.0",
+    "puppeteer-extra": "^3.1.18",
+    "puppeteer-extra-plugin-stealth": "^2.7.6"
   }
 }
