--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "tolo",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "^2.0.0"
-  }
+    "puppeteer": "^8.0.0",
+    "puppeteer-extra": "^3.1.18",
+    "puppeteer-extra-plugin-stealth": "^2.7.6"
+  },
+  "devDependencies": {}
 }
